Removes global variable
Great suggestion by @fsodano, added a data-pokemon-id in the HTML code to avoid unnecesary global variables in the .js file.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="img/arrow.png" id="left-arrow" alt="Last Pokemon">
         </div>
 
-        <div class="container">
+        <div class="container" data-pokemon-id="">
             <div class="image-holder"><img src="" class="pokemon-image" alt="pokemon"></div>
 
             <div class="data">
