Add toggle button for text/chart stats

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <div>Weight: <span class="weight"></span></div>
                 <label for="types">Types: </label>
                 <div class="types" name="types"></div>
-                <div class="stats">
+                <div class="stats"> 
+                    <button id="toggle-visibility">Toggle text/chart</button>
                     <div id="text-stats">
                         <h3>Stats</h3>
                         <div>HP: <span class="hp"></span></div>
@@ -44,7 +45,7 @@
                         <div>Special attack: <span class="special-attack"></span></div>
                         <div>Special defense: <span class="special-defense"></span></div>
                     </div>
-                    <div id="canvas">
+                    <div id="canvas" class="toggleVisibility">
                         <canvas id="myChart" width="200" height="200"></canvas>
                     </div>
                 </div>
