--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="image-holder">
                 <img src="" class="pokemon-image" id="pokemon-front" data-backsrc="" alt="pokemon">
                 <button id="button-reverse">
-                    <img src="refresh-arrow.svg" id="refresh-arrow" alt="">
+                    <img src="img/refresh-arrow.svg" id="refresh-arrow" alt="">
                 </button>
             </div>
             <div class="data">
