Add module files
First working version, search functionality still not implemented.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="body">
 
         <div class="arrow left-arrow">
-            <img src="img/arrow.png" id="left-arrow" alt="Last Pokemon">
+            <img src="img/arrow.png" id="left-arrow" alt="Last Pokemon" data-url="">
         </div>
 
         <div class="container">
@@ -57,13 +57,13 @@
         </div>
 
         <div class="arrow right-arrow">
-            <img src="img/arrow.png" id="right-arrow" alt="Next Pokemon">
+            <img src="img/arrow.png" id="right-arrow" alt="Next Pokemon" data-url="">
         </div>
 
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <script src='src/main.js'></script>
+    <script src='src/index.js' type="module"></script>
 </body>
 
 </html>
